--- a/speakup/src/index.css
+++ b/speakup/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*@layer base {
+    @font-face {
+      font-family: Hiragino Maru;
+      font-weight: 400;
+      src: url(localhost:8080/Assets/Fonts/Hiragino-Maru.otf) format("otf");
+    }
+}*/
