--- a/src/Components/Discussion/Styles/discussion.css
+++ b/src/Components/Discussion/Styles/discussion.css
@@ -1,3 +1,39 @@
 .min-h-14 {
     min-height: 3.5rem;
 }
+
+@keyframes flyup {
+    0%, 100%   { transform: translateY(0%); }
+    49%   { 
+        transform: translateY(-130%);       
+    }
+    51%   { 
+        transform: translateY(130%);       
+    }
+}
+
+@keyframes jumpup {
+    0%, 100%   { transform: translateY(0%); }
+    90%   { 
+        transform: translateY(-50%);       
+    }
+}
+
+@keyframes jumpdown {
+    0%, 100%   { transform: translateY(0%); }
+    90%   { 
+        transform: translateY(50%);       
+    }
+}
+
+.animate-fly-up {
+    animation: flyup 0.3s;
+}
+
+.animate-jump-up {
+    animation: jumpup 0.3s;
+}
+
+.animate-jump-down {
+    animation: jumpdown 0.3s;
+}
